feat(uml): completar CU-03 editor manual de diagramas
Implementa el modelo UML canonico tipado con clases, atributos, tipos y visibilidad.

Agrega validacion backend con errores HTTP 400 estructurados y aislamiento de BD para tests.

Integra JointJS como proyeccion visual con drag, zoom, pan, fit y persistencia de layout.

Agrega Association, Aggregation, Composition, Generalization, multiplicidades e inspector contextual.

Incluye soporte responsive para desktop, laptop y mobile, Material Symbols locales, tests y documentacion PUDS.