@@ -1,13 +1,17 @@
 package com.classforge.project.domain.document;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
+import java.util.UUID;
 
 public record DiagramLayout(
-        Map<String, Map<String, Object>> nodes
+        Map<UUID, DiagramNodeLayout> nodes
 ) {
-
     public DiagramLayout {
-        nodes = nodes == null ? Map.of() : Map.copyOf(nodes);
+        nodes = nodes == null
+                ? Map.of()
+                : Collections.unmodifiableMap(new HashMap<>(nodes));
     }
 
     public static DiagramLayout empty() {
