@@ -1,16 +1,21 @@
 package com.classforge.project.domain.document;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 public record UmlModel(
-        List<Map<String, Object>> classes,
-        List<Map<String, Object>> relationships
+        List<UmlClass> classes,
+        List<UmlRelationship> relationships
 ) {
-
     public UmlModel {
-        classes = classes == null ? List.of() : List.copyOf(classes);
-        relationships = relationships == null ? List.of() : List.copyOf(relationships);
+        classes = classes == null
+                ? List.of()
+                : Collections.unmodifiableList(new ArrayList<>(classes));
+
+        relationships = relationships == null
+                ? List.of()
+                : Collections.unmodifiableList(new ArrayList<>(relationships));
     }
 
     public static UmlModel empty() {
